--- a/style.css
+++ b/style.css
@@ -126,18 +126,8 @@ section:nth-child(2n) h3 {
   color: var(--clr-accent);
 }
 
-.section__title::after {
-  content: "";
-  display: block;
-  height: 2px;
-  width: 30%;
-  opacity: 0.7;
-  background-color: var(--clr-accent);
-}
-
 .section__title {
-  margin-bottom: 0.25rem;
-  /* margin-bottom: 0.5em; */
+  margin-bottom: 0.5em;
 }
 
 .section__subtitle {
@@ -148,7 +138,7 @@ section:nth-child(2n) h3 {
   margin-bottom: 1em;
 }
 .section__subtitle-intro {
-  margin-bottom: 1em;
+  margin-bottom: 3em;
 }
 .section__title-intro {
   font-weight: var(--fw-reg);
@@ -274,8 +264,7 @@ section:nth-child(2n) h3 {
   transform: scaleX(0);
   transform-origin: left;
   border-radius: 10px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05),
-    0 1px rgba(255, 255, 255, 0.8);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05), 0 1px rgba(255, 255, 255, 0.8);
   animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
 }
 @keyframes animate {
