--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ section:nth-child(2n) h3 {
 }
 
 .section__text {
-  margin-bottom: 0.625em;
+  margin-bottom: 4em;
   opacity: 0.9;
 }
 
@@ -288,7 +288,7 @@ section:nth-child(2n) h3 {
   width: 65%;
 }
 .skills__bar-progress.javascript span {
-  width: 40%;
+  width: 70%;
 }
 
 .skills__bar-progress.php span {
@@ -339,7 +339,7 @@ section:nth-child(2n) h3 {
   content: "65%";
 }
 .skills__bar-progress.javascript span::after {
-  content: "40%";
+  content: "70%";
 }
 .skills__bar-progress.php span::after {
   content: "60%";
@@ -414,6 +414,7 @@ section:nth-child(2n) h3 {
   }
   .formations__wraper {
     display: flex;
+    gap: 5em;
   }
   .formation {
     width: 100%;
